# valleys

./: .gitignore  README.md  main.py  notes.txt  pyproject.toml  valley.py
R/: get_network.R
eda/: 01_get_subregion_features.py  02_get_flowlines.py  eda.ipynb  eda.py  global_eda.ipynb
notebooks/: Valley_Bottom_Extraction.ipynb  basins.ipynb  cross_sections.ipynb  curvature_breakpoints.ipynb  curvature_testing.ipynb  eda.ipynb  features.ipynb  figures.ipynb  flowlines_hr.ipynb  full_workflow.ipynb  improvements.ipynb  nhd-mr_eda.ipynb  old_valley_tests.ipynb  rasterize_nhd.ipynb  rem_hand.ipynb  sampling_attributes.ipynb  signal_processing.ipynb  split.ipynb  toy_data.ipynb  valley_analysis.ipynb  valley_bottom_breakpoints.ipynb  valley_bottom_delineation.ipynb
pyvalleys/: __main__.py  breakpoints.py  centerline.py  cross_section.py  gis.py  nhd.py  segment_reaches.py  valley_extractor.py  watershed.py  workflow.py
sampledata/180400060301/: flowlines_mr.dbf  flowlines_mr.shp  flowlines_mr.shx
sampledata/180600060101/: flowlines_mr.dbf  flowlines_mr.shp  flowlines_mr.shx
sampledata/180701060201/: dem.tif  flowlines_mr.dbf  flowlines_mr.shp  flowlines_mr.shx
scripts/: 02_get_flowlines.py  get_hand.py  get_huc.py  get_huc12.py  get_sample_subbasins.py  prep_sample_valleys.py
toydata/example_valleys/: 180101100904_12_dem.tif  180101100904_12_dem.tif.aux.xml  180101100904_12_stream.tif  180101100904_12_stream.tif.aux.xml  180400060403_22_dem.tif  180400060403_22_dem.tif.aux.xml  180400060403_22_stream.tif  180400060403_22_stream.tif.aux.xml  180701020604_4_dem.tif  180701020604_4_dem.tif.aux.xml  180701020604_4_stream.tif  180701020604_4_stream.tif.aux.xml  bear_creek_10_dem.tif  bear_creek_10_dem.tif.aux.xml  bear_creek_10_stream.tif  bear_creek_10_stream.tif.aux.xml
valleys/: breakpoints.py  catchment.py  cross_section.py  fun.py  geomorphons.py  notes.txt  signal_processing.py  subbasin.py  subbasins.py  terrain.py  utils.py  valley.py  watershed.py  workflow.py
