[tool.poetry]
name = "valleys"
version = "0.3.0"
description = ""
authors = ["Arthur Koehl <avkoehl@ucdavis.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
numpy = "1.23.4"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
geopandas = "^0.13.2"
ipykernel = "^6.25.2"
shapely = "^2.0.1"
xarray-spatial = "^0.3.7"
plotly-express = "^0.4.1"
nbformat = "^5.9.2"
whitebox = "^2.3.1"
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.7.0"
gdal = "3.7.3"
centerline = "^1.0.1"
label-centerlines = {git = "git@github.com:ungarj/label_centerlines.git"}
pygeoutils = {git = "git@github.com:hyriver/pygeoutils.git"}
pygeohydro = {git = "git@github.com:hyriver/pygeohydro.git"}
py3dep = {git = "git@github.com:hyriver/py3dep.git"}
pynhd = {git = "git@github.com:hyriver/pynhd.git"}
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
