[tool.poetry]
name = "pyvalleys"
version = "0.4.2"
description = ""
authors = ["Arthur Koehl <avkoehl@ucdavis.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
numpy = "1.23.4"
geopandas = "^0.13.2"
shapely = "^2.0.1"
whitebox = "^2.3.1"
toml = "^0.10.2"
scipy = "^1.12.0"
xarray = "^2024.2.0"
rioxarray = "^0.15.1"
rasterio = "^1.3.9"
networkx = "^3.2.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.15.0"
ipykernel = "^6.25.2"
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.7.0"
nbformat = "^5.9.2"
matplotlib = "^3.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
